LM - Trying to align home page correctly by removing unecessary divs, and floating image right

--- a/views/home/home.css
+++ b/views/home/home.css
@@ -18,3 +18,7 @@
 .intro-banner-right {
     float:right;
 }
+
+.img-float-right {
+    float:right;
+}
